overlap labels fix

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 }
 
 .chart-wide {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 
 .wrapper {
